--- a/VisionMart/package.json
+++ b/VisionMart/package.json
@@ -10,8 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-navigation/stack": "^6.3.29",
+    "@rneui/base": "^4.0.0-rc.8",
+    "firebase": "^10.11.1",
     "react": "18.2.0",
-    "react-native": "0.74.1"
+    "react-native": "^0.74.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
@@ -22,6 +26,7 @@
     "@react-native/metro-config": "0.74.83",
     "@react-native/typescript-config": "0.74.83",
     "@types/react": "^18.2.6",
+    "@types/react-native-elements": "^0.18.0",
     "@types/react-test-renderer": "^18.0.0",
     "babel-jest": "^29.6.3",
     "eslint": "^8.19.0",
